Refactoring 1
Tidies up addExecution method and refines use of searchInventory method to call once and reference as needed (no recompute required). Changes in Model may need to be reverted, depending on future refactors.